--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
   </head>
     <div>
    <ul>
-   
     <li class="meteor"></li>
     <li class="meteor2"></li>
     <li class="meteor3"></li>
     <li class="meteor4"></li>
     <li class="meteor5"></li>
    </ul>
-    
+    </div>
   </body>
 </html>
